[package]
name = "medrs"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
config = "0.9.2"
regex = "1"
lazy_static = "1.3.0"
chrono = "0.4.6"
docopt = "1.1.0"
#mediawiki = "0.1.12"
mediawiki = { git = "https://github.com/magnusmanske/mediawiki_rust" }
wikibase = "0.3.7"
